--- a/GrpcCliente/GrpcCliente.csproj
+++ b/GrpcCliente/GrpcCliente.csproj
@@ -16,4 +16,10 @@
     </PackageReference>
   </ItemGroup>
 
+
+  <ItemGroup>
+    <Protobuf Include="Protos/greet.proto" GrpcServices="Client" />
+  </ItemGroup>
+
+
 </Project>
