--- a/GrpcCliente/GrpcCliente.csproj
+++ b/GrpcCliente/GrpcCliente.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <Protobuf Include="Protos/greet.proto" GrpcServices="Client" />
+    <Protobuf Include="Protos/customer.proto" GrpcServices="Client" />
   </ItemGroup>
 
 
